fix login-page whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -282,7 +282,7 @@ padding-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 78vh;
+    height: 550px;
 }
 
 .login-card{
